--- a/app/src/main/res/layout/fragment_location_summary.xml
+++ b/app/src/main/res/layout/fragment_location_summary.xml
@@ -159,6 +159,7 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/videos_card"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="4dp">
