--- a/app/src/main/res/layout/activity_location_search.xml
+++ b/app/src/main/res/layout/activity_location_search.xml
@@ -23,6 +23,7 @@
             android:id="@+id/location"
             android:hint="@string/city"
             android:text="Berlin"
+            android:singleLine="true"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
