--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -16,26 +16,26 @@
         android:layout_height="wrap_content">
 
         <com.android.volley.toolbox.NetworkImageView
-            android:id="@+id/place_picture"
+            android:id="@+id/video_thumbnail"
             android:src="@drawable/lac"
             android:layout_marginRight="6dp"
             android:scaleType="centerCrop"
             android:layout_width="100dp"
-            android:layout_height="90dp" />
+            android:layout_height="80dp" />
 
         <TextView
             android:id="@+id/name"
-            android:layout_toRightOf="@id/place_picture"
+            android:layout_toRightOf="@id/video_thumbnail"
             android:textSize="16sp"
             tools:text="Name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/rating"
-            android:layout_toRightOf="@id/place_picture"
+            android:id="@+id/duration"
+            android:layout_toRightOf="@id/video_thumbnail"
             android:layout_below="@id/name"
-            android:text="Rating: 4.5"
+            android:text="Views: 6587"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
