--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -15,29 +15,41 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
-        <com.android.volley.toolbox.NetworkImageView
-            android:id="@+id/video_thumbnail"
-            android:src="@drawable/lac"
+        <FrameLayout
+            android:id="@+id/thumbnail_container"
             android:layout_marginRight="6dp"
-            android:scaleType="centerCrop"
-            android:layout_width="100dp"
-            android:layout_height="80dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.android.volley.toolbox.NetworkImageView
+                android:id="@+id/video_thumbnail"
+                android:src="@drawable/lac"
+                android:scaleType="centerCrop"
+                android:layout_width="100dp"
+                android:layout_height="80dp" />
+
+            <TextView
+                android:id="@+id/duration"
+                android:background="@android:color/black"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:text="12:30"
+                android:layout_gravity="right|bottom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </FrameLayout>
 
         <TextView
             android:id="@+id/name"
-            android:layout_toRightOf="@id/video_thumbnail"
+            android:layout_toRightOf="@id/thumbnail_container"
             android:textSize="16sp"
             tools:text="Name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/duration"
-            android:layout_toRightOf="@id/video_thumbnail"
-            android:layout_below="@id/name"
-            android:text="Views: 6587"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 
