--- a/app/src/main/res/layout/fragment_location_summary.xml
+++ b/app/src/main/res/layout/fragment_location_summary.xml
@@ -190,35 +190,56 @@
                     android:layout_height="1dp" />
 
                 <LinearLayout
-                    android:id="@+id/thumbnail_container"
+                    android:id="@+id/videos_container"
                     android:layout_marginTop="4dp"
                     android:orientation="horizontal"
                     android:layout_width="fill_parent"
                     android:layout_height="140dp">
 
-                    <ImageView
+                    <FrameLayout
+                        android:layout_marginRight="3dp"
                         android:layout_weight="1"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/lac"
-                        android:layout_marginRight="2dp"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content">
 
+                        <com.android.volley.toolbox.NetworkImageView
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/lac"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content" />
 
-                    <ImageView
+                        <TextView
+                            android:lines="2"
+                            android:layout_gravity="bottom"
+                            android:background="#77000000"
+                            android:padding="4dp"
+                            android:textColor="@color/white"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content" />
+
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:layout_marginLeft="3dp"
                         android:layout_weight="1"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/bazin"
-                        android:layout_marginRight="2dp"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content">
 
-                    <ImageView
-                        android:layout_weight="1"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/lac"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content" />
+                        <com.android.volley.toolbox.NetworkImageView
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/lac"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:lines="2"
+                            android:layout_gravity="bottom"
+                            android:background="#77000000"
+                            android:padding="4dp"
+                            android:textColor="@color/white"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content" />
+                    </FrameLayout>
                 </LinearLayout>
 
             </LinearLayout>
