--- a/app/src/main/res/layout/fragment_location_summary.xml
+++ b/app/src/main/res/layout/fragment_location_summary.xml
@@ -125,12 +125,58 @@
                     android:background="#ccc"
                     android:layout_height="1dp" />
 
-                <ImageView
+                <LinearLayout
+                    android:id="@+id/attractions_photos_container"
                     android:layout_marginTop="4dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lac"
+                    android:orientation="horizontal"
                     android:layout_width="fill_parent"
-                    android:layout_height="140dp" />
+                    android:layout_height="wrap_content">
+
+                    <FrameLayout
+                        android:layout_marginRight="3dp"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content">
+
+                        <com.android.volley.toolbox.NetworkImageView
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/lac"
+                            android:layout_width="fill_parent"
+                            android:layout_height="120dp" />
+
+                        <TextView
+                            android:lines="2"
+                            android:layout_gravity="bottom"
+                            android:background="#77000000"
+                            android:padding="4dp"
+                            android:textColor="@color/white"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content" />
+
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:layout_marginLeft="3dp"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content">
+
+                        <com.android.volley.toolbox.NetworkImageView
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/lac"
+                            android:layout_width="fill_parent"
+                            android:layout_height="120dp" />
+
+                        <TextView
+                            android:lines="2"
+                            android:layout_gravity="bottom"
+                            android:background="#77000000"
+                            android:padding="4dp"
+                            android:textColor="@color/white"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content" />
+                    </FrameLayout>
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -166,83 +212,9 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/videos_card"
-                android:orientation="vertical"
-                android:padding="6dp"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
+            <include layout="@layout/videos_card" />
 
-                <TextView
-                    android:id="@+id/videos_label"
-                    style="@style/TextView.Category"
-                    android:text="VIDEOS"
-                    android:drawableLeft="@drawable/ic_video"
-                    android:drawableStart="@drawable/ic_video"
-                    android:gravity="center_vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content" />
 
-                <View
-                    android:layout_marginBottom="6dp"
-                    android:layout_width="fill_parent"
-                    android:background="#ccc"
-                    android:layout_height="1dp" />
-
-                <LinearLayout
-                    android:id="@+id/videos_container"
-                    android:layout_marginTop="4dp"
-                    android:orientation="horizontal"
-                    android:layout_width="fill_parent"
-                    android:layout_height="140dp">
-
-                    <FrameLayout
-                        android:layout_marginRight="3dp"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content">
-
-                        <com.android.volley.toolbox.NetworkImageView
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/lac"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:lines="2"
-                            android:layout_gravity="bottom"
-                            android:background="#77000000"
-                            android:padding="4dp"
-                            android:textColor="@color/white"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content" />
-
-                    </FrameLayout>
-
-                    <FrameLayout
-                        android:layout_marginLeft="3dp"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content">
-
-                        <com.android.volley.toolbox.NetworkImageView
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/lac"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:lines="2"
-                            android:layout_gravity="bottom"
-                            android:background="#77000000"
-                            android:padding="4dp"
-                            android:textColor="@color/white"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content" />
-                    </FrameLayout>
-                </LinearLayout>
-
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
