--- a/app/src/main/res/layout/fragment_location_summary.xml
+++ b/app/src/main/res/layout/fragment_location_summary.xml
@@ -180,8 +180,10 @@
 
             </LinearLayout>
 
+            <!-- StreetView won't be in first version -->
             <LinearLayout
                 android:id="@+id/streetview_card"
+                android:visibility="gone"
                 android:orientation="vertical"
                 android:padding="6dp"
                 android:layout_width="fill_parent"
