--- a/app/src/main/res/layout-land/layout_card_attractions.xml
+++ b/app/src/main/res/layout-land/layout_card_attractions.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/videos_container"
+    android:id="@+id/attractions_photos_container"
+    android:layout_marginTop="4dp"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
@@ -13,6 +14,13 @@
         android:layout_weight="1"
         android:layout_marginRight="3dp"
         android:layout_marginEnd="3dp" />
+
+    <com.traveler.views.PreviewImage
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp" />
 
     <com.traveler.views.PreviewImage
         android:layout_width="0dp"
