--- a/app/src/main/res/layout/fragment_location_summary.xml
+++ b/app/src/main/res/layout/fragment_location_summary.xml
@@ -13,13 +13,17 @@
             android:orientation="vertical">
 
             <FrameLayout
-                android:id="@+id/header_container"
                 android:layout_width="fill_parent"
                 android:layout_height="240dp">
 
                 <com.android.volley.toolbox.NetworkImageView
                     android:id="@+id/big_image"
                     tools:src="@drawable/lac"
+                    android:layout_width="fill_parent"
+                    android:layout_height="240dp" />
+
+                <FrameLayout
+                    android:id="@+id/header_container"
                     android:layout_width="fill_parent"
                     android:layout_height="240dp" />
 
