Created preview images for main screen

--- a/app/src/main/res/layout/fragment_location_summary.xml
+++ b/app/src/main/res/layout/fragment_location_summary.xml
@@ -12,31 +12,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <FrameLayout
+            <com.traveler.views.ScrimImageHeader
+                android:id="@+id/big_image_header"
                 android:layout_width="fill_parent"
-                android:layout_height="240dp">
-
-                <com.android.volley.toolbox.NetworkImageView
-                    android:id="@+id/big_image"
-                    tools:src="@drawable/lac"
-                    android:layout_width="fill_parent"
-                    android:layout_height="240dp" />
-
-                <FrameLayout
-                    android:id="@+id/header_container"
-                    android:layout_width="fill_parent"
-                    android:layout_height="240dp" />
-
-                <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:padding="6dp"
-                    android:textSize="16sp"
-                    android:text="10 photos"
-                    android:layout_gravity="bottom" />
-
-            </FrameLayout>
+                android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:layout_marginTop="1dp"
