--- a/app/src/main/res/layout/fragment_videos.xml
+++ b/app/src/main/res/layout/fragment_videos.xml
@@ -1,6 +1,21 @@
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/videos_list"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="2dp"
-    android:paddingRight="2dp"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/videos_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp" />
+
+
+    <com.traveler.views.ProgressView
+        android:id="@+id/progress_view"
+        app:progressViewErrorText="@string/cant_load_videos"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
+</RelativeLayout>
+
