--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="windowBackgroundColor">#333333</color>
     <color name="black_translucent">#80000000</color>
     <color name="fab">#0099cc</color>
+
+    <color name="colorPrimary">#117700</color>
+    <color name="colorPrimaryDark">#424242</color>
+    <color name="colorAccent">#11424242</color>
+
 </resources>
