--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,21 +2,17 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <item name="android:actionBarStyle">@style/Traveler.ActionBar</item>
+    <style name="AppTheme" parent="AppTheme.Base" />
+
+    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="Traveler.ActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">@null</item>
-        <item name="android:icon">@android:color/transparent</item>
-    </style>
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar" />
 
-    <style name="ThemeTransparentActionBarOverlay" parent="AppTheme">
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-    </style>
-
-    <style name="AttractionsTheme" parent="AppTheme">
+    <style name="AppTheme.Attractions" parent="AppTheme">
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
