Refactored to use EventButs

--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -1,7 +1,8 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -123,6 +124,7 @@
     <com.traveler.views.ProgressView
         android:id="@+id/progress_view"
         android:layout_centerInParent="true"
+        app:progressViewErrorText="@string/cant_load_place_details"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
