Added Navigation Drawer (work in progress....)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="black_translucent">#80000000</color>
     <color name="fab">#0099cc</color>
 
-    <color name="colorPrimary">#117700</color>
+    <color name="colorPrimary">#7CAF00</color>
     <color name="colorPrimaryDark">#424242</color>
     <color name="colorAccent">#11424242</color>
 
