--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -1,57 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/card"
-    android:orientation="horizontal"
-    android:clickable="true"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="6dp"
-    card_view:cardCornerRadius="2dp">
 
-    <RelativeLayout
-        android:padding="4dp"
-        android:layout_width="fill_parent"
+
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="4dp"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
+
+    <FrameLayout
+        android:id="@+id/thumbnail_container"
+        android:layout_marginRight="6dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <FrameLayout
-            android:id="@+id/thumbnail_container"
-            android:layout_marginRight="6dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <com.android.volley.toolbox.NetworkImageView
-                android:id="@+id/video_thumbnail"
-                android:src="@drawable/lac"
-                android:scaleType="centerCrop"
-                android:layout_width="100dp"
-                android:layout_height="80dp" />
-
-            <TextView
-                android:id="@+id/duration"
-                android:background="@android:color/black"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                android:text="12:30"
-                android:layout_gravity="right|bottom"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </FrameLayout>
+        <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/video_thumbnail"
+            android:src="@drawable/lac"
+            android:scaleType="centerCrop"
+            android:layout_width="100dp"
+            android:layout_height="80dp" />
 
         <TextView
-            android:id="@+id/name"
-            android:layout_toRightOf="@id/thumbnail_container"
-            android:textSize="16sp"
-            tools:text="Name"
-            android:layout_width="fill_parent"
+            android:id="@+id/duration"
+            android:background="@android:color/black"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:text="12:30"
+            android:layout_gravity="right|bottom"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+    </FrameLayout>
 
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/name"
+        android:layout_toRightOf="@id/thumbnail_container"
+        android:textSize="16sp"
+        tools:text="Name"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 
-</android.support.v7.widget.CardView>
+
+</RelativeLayout>
+
 
