--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,10 @@
     <color name="black_translucent">#80000000</color>
     <color name="fab">#0099cc</color>
 
-    <color name="colorPrimary">#7CAF00</color>
+    <color name="colorPrimary">#669900</color>
     <color name="colorPrimaryDark">#424242</color>
     <color name="colorAccent">#11424242</color>
+
+    <!-- 669900 -->
 
 </resources>
