Added transparent theme (work in progress....)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="grey_light">#5ccc</color>
     <color name="white">#fff</color>
     <color name="row_foreground">#00000000</color>
+    <color name="transparent">#99550000</color>
 
     <color name="windowBackgroundColor">#333333</color>
     <color name="black_translucent">#80000000</color>
