--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="colorPrimary">#669900</color>
     <color name="colorPrimaryDark">#424242</color>
     <color name="colorAccent">#11424242</color>
+    <color name="main">#fff</color>
 
     <!-- 669900 -->
 
