--- a/app/src/main/res/drawable/view_all_pressed.xml
+++ b/app/src/main/res/drawable/view_all_pressed.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#6DA000" />
+    <solid android:color="@color/view_all_pressed" />
     <corners android:radius="2dp" />
 </shape>
