--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,10 +10,27 @@
     <color name="black_translucent">#80000000</color>
     <color name="fab">#0099cc</color>
 
-    <color name="colorPrimary">#669900</color>
-    <color name="colorPrimaryDark">#424242</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#4A23B9</color>
     <color name="colorAccent">#11424242</color>
     <color name="main">#fff</color>
+    <color name="view_all_pressed">#9874FC</color>
+
+    <color name="teal">#009688</color>
+    <color name="light_teal">#b2dfdb</color>
+    <color name="black">#000000</color>
+    <color name="red">#e51c23</color>
+    <color name="pink">#e91e63</color>
+    <color name="purple">#9c27b0</color>
+    <color name="indigo">#3f51b5</color>
+    <color name="light_blue">#03a9f4</color>
+    <color name="green">#259b24</color>
+    <color name="orange">#ff9800</color>
+    <color name="brown">#795548</color>
+    <color name="grey">#9e9e9e</color>
+    <color name="dark_grey">#424242</color>
+    <color name="transparent_white">#22ffffff</color>
+    <color name="light_pink">#FCE6E9</color>
 
     <!-- 669900 -->
 
