--- a/app/src/main/res/layout/fragment_favorite_places.xml
+++ b/app/src/main/res/layout/fragment_favorite_places.xml
@@ -5,15 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/favorite_places"
-        android:text="Favorite places"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/show"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/favorites"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp" />
 
 </LinearLayout>
