--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -61,8 +61,8 @@
                 android:id="@+id/add_to_favorites"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                fab:fab_icon="@drawable/ic_bookmark"
                 fab:fab_colorNormal="@color/white"
+                fab:fab_colorPressed="@color/grey"
                 android:layout_alignParentRight="true"
                 android:layout_marginBottom="-36dp"
                 android:layout_alignParentEnd="true"
